src/components/sidebar/list/listEntry/listEntry.module.css
.container {
  padding: 0.5rem 0.5rem 0.5rem 1rem;
  background-color: #fff;
  border: 0.125rem solid black;
  border-radius: 10rem;
  margin-top: 0.5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.label {
  font-size: 1rem;
}

.delete-button {
  height: 1.75rem;
  width: 1.75rem;
  border: black solid 2px;
  border-radius: 50%;
  background-color: #e2e2e2;
}

@media screen and (min-width: 720px) {
  .label {
    font-size: 1.25rem;
  }
}

@media (hover: hover) {
  .delete-button {
    visibility: hidden;
  }

  .container:hover .delete-button {
    visibility: visible;
  }
}

